# postech_ibovespa_trend_forecast

./: .gitignore  Dados_Históricos-Ibovespa_02_01_2020-01_07_2025.csv  README.md  desafio.ipynb  desafio_ibovespa.ipynb  hello.py  melhor_modelo.pth  pyproject.toml
.ipynb_checkpoints/: desafio_ibovespa-checkpoint.ipynb
