[project]
name = "postech_ibovespa_trend_forecast"
version = "0.1.0"
description = "Tech Challenge - Previsão Ibovespa"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "jupyter-contrib-nbextensions>=0.7.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "yfinance>=0.2.65",
]
